erroneously ignores a validation error if no error callback set

Reported by Stefan Behnel
https://bugzilla.gnome.org/show_bug.cgi?id=724903